# paccel

./: AGENTS.md  Cargo.toml  Makefile  PKGBUILD  README.md  dkms.conf  paccel.install  paccel.sysusers
.github/workflows/: Tests.yml
bench/: evinputlag.c
cli/: Cargo.toml
cli/src/: main.rs
crates/core/: Cargo.toml  build.rs
crates/core/src/: context.rs  inputspeed.rs  lib.rs  libpaccel.c  libpaccel.rs  params.rs  persist.rs  sens_fns.rs
driver/: Makefile  accel.h  accel_k.h  config.h  config_k.h  input_echo.h  input_handler.h  paccel.c  speed.h  telemetry_k.h  timing.h
driver/tests/: accel.test.c  config.test.c  run_tests.sh  state.test.c  timing.test.c
driver/tests/snapshots/: Natural__SENS_MULT-1-DECAY_RATE-0.03-OFFSET8-LIMIT-1.5.snapshot  Rotation__SENS_MULT-1-ANGLE-45.snapshot  Rotation__SENS_MULT-1-ANGLE-90.snapshot  SENS_MULT-0.07-ACCEL-0.055-OFFSET21-OUTPUT_CAP-3.snapshot  SENS_MULT-0.0917-ACCEL-0.002048-OFFSET78.125-OUTPUT_CAP-2.0239.snapshot  SENS_MULT-0.1875-ACCEL-0.05625-OFFSET10.6666666-OUTPUT_CAP-2.snapshot  Synchronous__SENS_MULT-1-GAMMA-0.8-SMOOTH0.5-MOTIVITY-1.5-SYNC_SPEED-32.snapshot
systemd/: paccel-apply.service
tests/: identity.test.sh
tui/: Cargo.toml
tui/src/: action.rs  app.rs  event.rs  graph.rs  lib.rs  param_input.rs  screen.rs  utils.rs
udev_rules/: 99-paccel.rules
