[workspace]
resolver = "2"
members = ["cli", "tui", "crates/*"]

[workspace.dependencies]
anyhow = "1.0.79"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
clap = { version = "4.4.18", features = ["derive"] }
paste = "1.0.15"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
libc = "0.2"
paccel-core = { path = "./crates/core" }
