[package]
name = "paccel-cli"
version = "0.6.0"
edition = "2021"

[[bin]]
name = "paccel"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
clap_complete = "4.4.9"
clap = { workspace = true }
paccel-core = { path = "../crates/core/", features = ["clap"] }
paccel-tui = { path = "./../tui/" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[build-dependencies]
cc = "1.2.3"
